--- a/htmlTest/exemploHtmlCss.html
+++ b/htmlTest/exemploHtmlCss.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>Exemplo HTML</title>
-    <style type="text/css">
+    <link href="estilo.css" rel="stylesheet" type="text/css" />
+    <!--<style type="text/css">
       h1 {
         font-style: italic;
       }
@@ -18,7 +19,7 @@
       #back{
         background-color: rgb(27, 236, 205);
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <div id="back">
