--- a/htmlTest/listEditra.html
+++ b/htmlTest/listEditra.html
@@ -1,5 +1,6 @@
-      <!-- LISTAR-->
-      <!-- Funcionalidades: listar/Adicionar-->
+      <!-- LISTAR (INSERIR EM CÓDIGO LIST/ADD/UPD EM MAIN.HTML)-->
+
+      <!--Busca de artigos -->
       <div class="container mt-3">
         <div class="row">
           <div class="col-md-8">
@@ -16,7 +17,7 @@
               </div>
             </div>
           </div>
-          <!--col-md-8 -->
+          <!--Lista de artigos -->
           <div class="col-md-6">
             <h4>Artigos</h4>
 
@@ -26,8 +27,8 @@
             </ul>
             <button class="m-1 btn btn-sm btn-danger">Excluir todos</button>
           </div>
-          <!--col-md-6 -->
 
+          <!-- Detalhes do artigo -->
           <div class="col-md-6">
             <div>
               <h4>&nbsp;</h4>
@@ -52,8 +53,5 @@
               <a href="/list/1" class="btn btn-warning" role="button">Editar</a>
             </div>
           </div>
-          <!--col-md-6 -->
         </div>
-        <!--col-md-8 -->
       </div>
-      <!--list row -->
